remove URL deprecation